--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -17,8 +17,10 @@ Library
     WhatMorphism
 
   Other-modules:
+    WhatMorphism.DirectedGraph
     WhatMorphism.Pass
 
   Build-depends:
-    base >= 4   && < 5,
-    ghc  >= 7.6 && < 7.7
+    base       >= 4   && < 5,
+    containers >= 0.3 && < 0.6,
+    ghc        >= 7.6 && < 7.7
