Stuff to detect functions

--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -18,6 +18,8 @@ Library
 
   Other-modules:
     WhatMorphism.DirectedGraph
+    WhatMorphism.Expr
+    WhatMorphism.Function
     WhatMorphism.Pass
 
   Build-depends:
