--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -25,4 +25,5 @@ Library
   Build-depends:
     base       >= 4   && < 5,
     containers >= 0.3 && < 0.6,
-    ghc        >= 7.6 && < 7.7
+    ghc        >= 7.6 && < 7.7,
+    syb        >= 0.3 && < 0.4
