--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -26,4 +26,5 @@ Library
     base       >= 4   && < 5,
     containers >= 0.3 && < 0.6,
     ghc        >= 7.6 && < 7.7,
+    mtl        >= 2.1 && < 2.2,
     syb        >= 0.3 && < 0.4
