--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -22,6 +22,7 @@ Library
     WhatMorphism.Expr
     WhatMorphism.Function
     WhatMorphism.Pass
+    WhatMorphism.RewriteM
 
   Build-depends:
     base       >= 4   && < 5,
