--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -25,6 +25,7 @@ Library
     WhatMorphism.Pass
     WhatMorphism.Pattern
     WhatMorphism.RewriteM
+    WhatMorphism.SynEq
 
   Build-depends:
     base       >= 4   && < 5,
