Glue & more Build code

--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -17,6 +17,7 @@ Library
     WhatMorphism
 
   Other-modules:
+    WhatMorphism.Build
     WhatMorphism.DirectedGraph
     WhatMorphism.Dump
     WhatMorphism.Expr
