--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -15,6 +15,8 @@ Library
 
   Exposed-modules:
     WhatMorphism
+    WhatMorphism.Annotations
+    WhatMorphism.TemplateHaskell
 
   Other-modules:
     WhatMorphism.Build
@@ -29,8 +31,9 @@ Library
     WhatMorphism.SynEq
 
   Build-depends:
-    base       >= 4   && < 5,
-    containers >= 0.3 && < 0.6,
-    ghc        >= 7.6 && < 7.7,
-    mtl        >= 2.1 && < 2.2,
-    syb        >= 0.3 && < 0.4
+    base             >= 4   && < 5,
+    containers       >= 0.3 && < 0.6,
+    ghc              >= 7.6 && < 7.7,
+    mtl              >= 2.1 && < 2.2,
+    syb              >= 0.3 && < 0.4,
+    template-haskell >= 2.8 && < 2.9
