Add RemoveRec module

--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -25,6 +25,7 @@ Library
     WhatMorphism.Expr
     WhatMorphism.Pass
     WhatMorphism.Pattern
+    WhatMorphism.RemoveRec
     WhatMorphism.RewriteM
     WhatMorphism.SynEq
 
