--- a/what-morphism.cabal
+++ b/what-morphism.cabal
@@ -20,6 +20,7 @@ Library
     WhatMorphism.TemplateHaskell
 
   Other-modules:
+    WhatMorphism.AnyBool
     WhatMorphism.Build
     WhatMorphism.DirectedGraph
     WhatMorphism.Dump
